--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -36,7 +36,6 @@ body.light-mode {
 html, body{
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
 }
 
 /** 
